--- a/The District/assets/css/platsparcatégorie.css
+++ b/The District/assets/css/platsparcatégorie.css
@@ -76,4 +76,19 @@ body{
     color:#E3A592;
     font-family: Georgia, serif;
     text-align: center;
+    font-weight: bold;
+    font-size: 23px;
 }
+
+.cardscolor{
+    background-color: #360E44 ;
+}
+
+.txtcolor{
+    color:white;
+}
+
+/*position: fixed;
+      top: 0; right: 0; bottom: 0; left: 0;
+      object-fit: cover;
+      z-index: 1;*/
