--- a/The District/assets/css/accueil.css
+++ b/The District/assets/css/accueil.css
@@ -201,34 +201,14 @@ p{
     height: 40px;
 }
 
-/*justify-content:center*/
-
-
-
-/*.parent {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 0.2fr 1fr 0.5fr 0.8fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    }
-    
-    .div1 { grid-area: 1 / 1 / 2 / 4; }
-    .div2 { grid-area: 1 / 1 / 2 / 2; }
-    .div3 { grid-area: 1 / 2 / 2 / 4; }
-    .div4 { grid-area: 2 / 1 / 3 / 4; }
-    .div5 { grid-area: 2 / 1 / 3 / 2; }
-    .div6 { grid-area: 2 / 1 / 3 / 2; }
-    .div7 { grid-area: 2 / 2 / 3 / 3; }
-    .div8 { grid-area: 2 / 3 / 3 / 4; }
-    .div9 { grid-area: 3 / 1 / 4 / 2; }
-    .div10 { grid-area: 3 / 2 / 4 / 3; }
-    .div11 { grid-area: 3 / 3 / 4 / 4; }
-    .div12 { grid-area: 3 / 1 / 4 / 2; }
-    .div13 { grid-area: 3 / 2 / 4 / 3; }
-    .div14 { grid-area: 3 / 3 / 4 / 4; }
-    .div15 { grid-area: 4 / 1 / 5 / 4; }
-    .div16 { grid-area: 4 / 1 / 5 / 2; }
-    .div17 { grid-area: 4 / 2 / 5 / 3; }
-    .div18 { grid-area: 4 / 3 / 5 / 4; }*/
-    
+.parallax{
+    background-image: url(../img/bg3.jpeg);
+    background-attachment: fixed;
+    background-position: center;
+    background-size:cover;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -50;
+    margin-top: 0%;
+}
