--- a/The District/assets/css/accueil.css
+++ b/The District/assets/css/accueil.css
@@ -116,6 +116,9 @@ body{
     border-radius: 50px;
     border:solid;
     border:10px solid;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #plat1{
@@ -129,6 +132,9 @@ body{
     border-radius: 50px;
     border:solid;
     border:10px solid;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #plat2{
@@ -142,6 +148,9 @@ body{
     border-radius: 50px;
     border:solid;
     border:10px solid;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #plat3{
@@ -153,6 +162,7 @@ p{
     color:#E3A592;
     font-family: Georgia, serif;
     font-size:25px;
+    font-weight: bold;
 }
 
 #bandereaubas{
@@ -202,7 +212,7 @@ p{
 }
 
 .parallax{
-    background-image: url(../img/bg3.jpeg);
+    background-image: url(../img/bunch-pasta-ingredients.jpg);
     background-attachment: fixed;
     background-position: center;
     background-size:cover;
@@ -212,3 +222,7 @@ p{
     z-index: -50;
     margin-top: 0%;
 }
+
+/*#boutondefilement{
+    
+}*/
