--- a/The District/assets/css/accueil.css
+++ b/The District/assets/css/accueil.css
@@ -223,6 +223,18 @@ p{
     margin-top: 0%;
 }
 
-/*#boutondefilement{
+.animeimage{
+    transition: 0.5s ease;
+}
+
+.animeimage:hover{
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    transform: scale(1.1);
+    transition: 1s ease;
+}
+
+@media screen and (max-width:1000px){
     
-}*/
+    
+}
