--- a/Total War Warhammer/assets/css/index.css
+++ b/Total War Warhammer/assets/css/index.css
@@ -1,3 +1,31 @@
 body{
     background-color:#7CC6DD;
 }
+
+ul{
+    text-align: center;
+    font-weight: bold;
+}
+
+.backgroundHeader{
+    background-color:#1A657C;
+}
+
+.buttoncolor{
+    background-color: #112159;
+    color:white;
+}
+
+.searchcolor{
+    background-color:#112159;
+}
+
+.form-control::placeholder{
+    color:white;
+    font-weight: bold;
+    text-align: center;
+}
+
+p{
+    font-weight: bold;
+}
