--- a/Total War Warhammer/assets/css/liste-des-factions.css
+++ b/Total War Warhammer/assets/css/liste-des-factions.css
@@ -2,11 +2,6 @@ body{
     background-color:#7CC6DD;
 }
 
-ul{
-    text-align: center;
-    font-weight: bold;
-}
-
 .backgroundHeader{
     background-color:#1A657C;
 }
@@ -26,10 +21,11 @@ ul{
     text-align: center;
 }
 
-p{
-    font-weight: bold;
-}
-
 .footerColor{
     background-color: #1A657C;
+}
+
+.titleFaction{
+    background-color: #2C90BB;
+    color:white;
 }
